--- a/style.scss
+++ b/style.scss
@@ -16,121 +16,128 @@ body {
   header {
     display: flex;
     justify-content: space-between;
-    align-items: end;
-  }
-  hr {
-    width: 100vw * 0.96;
-    border-color: $content__table--border_color;
-    border-style: $content__table--border_solid;
-    border-width: $content__table--border_weight 0 0 0;
+    align-items: center;
   }
 }
 
 // ヘッダー　//
-.header__title {
-  color: $color_main;
-  font-size: $header__title--font_size;
-  font-weight: bold;
-}
-.header__button {
-  padding-bottom: 4px;
-  color: $color_main;
-  font-size: 12px;
+.header {
+  &__title {
+    color: $color_main;
+    font-size: $header__title--font_size;
+    font-weight: bold;
+  }
+  &__count-doing {
+    color: $color_main;
+    font-size: $header__title--font_size;
+    font-weight: bold;
+  }
 }
 
 // コンテンツ //
-section {
-  form {
-    width: 100vw * 0.96;
+.contents {
+  &__menu {
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
   }
-}
-.content__table {
-  width: 100vw * 0.96;
-  font-size: $content__table--font_size;
-  // tr {
-  //   border-bottom-color: $content__table--border_color;
-  //   border-bottom-style: $content__table--border_solid;
-  //   border-bottom-width: $content__table--border_weight;
-  // }
-  td {
-    padding: 6px 0;
+  &__count-done {
+    color: $content__table-name--done_font_color;
+    font-size: 12px;
   }
-}
-// 状態ボタン用のtd
-.content__table-status {
-  width: 30px;
-  min-height: 30px;
-  vertical-align: middle;
-  border: none;
-}
-// 状態ボタン用のdiv(作業中)
-.contents__table-status-div--doing {
-  width: 20px;
-  height: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-color: $content__table-div--border_color;
-  border-style: $content__table-div--border_solid;
-  border-width: $content__table-div--border_weight;
-  border-radius: 50%;
-}
-// 状態ボタン用のdiv(完了:外側)
-.contents__table-status-div--done_out {
-  width: 20px;
-  height: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-color: $color_main;
-  border-style: $content__table-div--border_solid;
-  border-width: $content__table-div--border_weight;
-  border-radius: 50%;
-}
-// 状態ボタン用のdiv(完了:内側)
-.contents__table-status-div--done_in {
-  width: 12px;
-  height: 12px;
-  border-color: $color_main;
-  border-style: $content__table-div--border_solid;
-  border-width: $content__table-div--border_weight;
-  background-color: $color_main;
-  border-radius: 50%;
-}
-// タスクの名前用のtd
-.content__table-name {
-  border-bottom-color: $content__table--border_color;
-  border-bottom-style: $content__table--border_solid;
-  border-bottom-width: $content__table--border_weight;
-}
-// 完了タスクのフォントカラー変更用
-.content__table-name--done {
-  color: $content__table-name--done_font_color;
-}
-// 削除ボタン用のtd
-.content__table-delete {
-  width: 30px;
-  min-height: 30px;
-  vertical-align: middle;
-  border-bottom-color: $content__table--border_color;
-  border-bottom-style: $content__table--border_solid;
-  border-bottom-width: $content__table--border_weight;
-}
-// 削除ボタン用のdiv
-.contents__table-delete-div {
-  margin-right: 100vw * 0.04;
-  width: 20px;
-  height: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: $color_main;
-  border-color: $color_main;
-  border-style: $content__table-div--border_solid;
-  border-width: $content__table-div--border_weight;
-  border-radius: 50%;
+  &__button {
+    padding-bottom: 4px;
+    color: $color_main;
+    font-size: 12px;
+  }
+  &__table {
+    width: 100vw * 0.96;
+    font-size: $content__table--font_size;
+    thead {
+      tr:first-child {
+        border-top-color: $content__table--border_color;
+        border-top-style: $content__table--border_solid;
+        border-top-width: $content__table--border_weight;
+      }
+    }
+    td {
+      padding: 6px 0;
+    }
+  }
+  // 状態ボタン用のtd
+  &__table-status {
+    width: 30px;
+    min-height: 30px;
+    vertical-align: middle;
+    border: none;
+    // 状態ボタン用のdiv(作業中)
+    &-div--doing {
+      width: 20px;
+      height: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-color: $content__table-div--border_color;
+      border-style: $content__table-div--border_solid;
+      border-width: $content__table-div--border_weight;
+      border-radius: 50%;
+    }
+    // 状態ボタン用のdiv(完了:外側)
+    &-div--done_out {
+      width: 20px;
+      height: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-color: $color_main;
+      border-style: $content__table-div--border_solid;
+      border-width: $content__table-div--border_weight;
+      border-radius: 50%;
+    }
+    // 状態ボタン用のdiv(完了:内側)
+    &-div--done_in {
+      width: 12px;
+      height: 12px;
+      border-color: $color_main;
+      border-style: $content__table-div--border_solid;
+      border-width: $content__table-div--border_weight;
+      background-color: $color_main;
+      border-radius: 50%;
+    }
+  }
+  // タスクの名前用のtd
+  &__table-name {
+    border-bottom-color: $content__table--border_color;
+    border-bottom-style: $content__table--border_solid;
+    border-bottom-width: $content__table--border_weight;
+
+    // 完了タスクのフォントカラー変更用
+    &--done {
+      color: $content__table-name--done_font_color;
+    }
+  }
+  // 削除ボタン用のtd
+  &__table-delete {
+    width: 30px;
+    min-height: 30px;
+    vertical-align: middle;
+    border-bottom-color: $content__table--border_color;
+    border-bottom-style: $content__table--border_solid;
+    border-bottom-width: $content__table--border_weight;
+    // 削除ボタン用のdiv
+    &-div {
+      margin-right: 100vw * 0.04;
+      width: 20px;
+      height: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $color_main;
+      border-color: $color_main;
+      border-style: $content__table-div--border_solid;
+      border-width: $content__table-div--border_weight;
+      border-radius: 50%;
+    }
+  }
 }
 // 削除ボタンのアイコン
 .ai-trash-can {
